.metadata/.plugins/org.eclipse.cdt.ui/EjercicioClase3.build.log
11:16:28 **** Incremental Build of configuration Debug for project EjercicioClase3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase3.o "..\\EjercicioClase3.c" 
..\EjercicioClase3.c: In function 'main':
..\EjercicioClase3.c:104:28: error: invalid initializer
  Vec2D miVectorApuntador = &miVector;
                            ^

11:16:28 Build Failed. 1 errors, 0 warnings. (took 469ms)

